--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="content-wrapper">
       <div id="resultadoFinal"></div>
 
-      <div style="display: flex; flex-direction: column; align-items: center">
+      <div class="camera-side">
         <video
           id="camara"
           autoplay
