Update VP options in the selection dropdown

--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
 
     <label for="vp">Selecciona tu VP:</label>
     <select id="vp">
-      <option value="Finanzas">VP Finanzas</option>
-      <option value="GDH">VP GDH</option>
-      <option value="Operaciones">VP Operaciones</option>
-      <option value="Comercial">VP Comercial</option>
+      <option value="VP FINANZAS">VP Finanzas</option>
+      <option value="VP OPERACIONES Y TECNOLOGIA">VP OPERACIONES Y TECNOLOGIA</option>
+      <option value="VP RIESGOS">VP RIESGOS</option>
+      <option value="VP MERCADO CAPITALES">VP MERCADO CAPITALES</option>
+      <option value="VP COMERCIAL">VP COMERCIAL</option>
+      <option value="VP NEGOCIOS RETAIL Y CANALES">VP NEGOCIOS RETAIL Y CANALES</option>
+      <option value="VP ASUNTOS CORPORATIVOS Y LEGALES">VP ASUNTOS CORPORATIVOS Y LEGALES</option>
+      <option value="DIV. AUDITORIA INTERNA">DIV. AUDITORIA INTERNA</option>
+      <option value="DIV. CUMPLIMIENTO">DIV. CUMPLIMIENTO</option>
+      <option value="ANALYTICS CENTER OF EXCELLENCE">ANALYTICS CENTER OF EXCELLENCE</option>
+      <option value="DIV. LABENTANA">DIV. LABENTANA</option>
+      <option value="VP GESTION Y DESARROLLO HUMANO">VP GESTION Y DESARROLLO HUMANO</option>
+      <option value="VP FDIGITAL DELIVERY Y PARTNERSHIPS">VP FDIGITAL DELIVERY Y PARTNERSHIPS</option>
     </select>
 
     <button onclick="startGame()">Ingresar al juego</button>
