Update team name placeholder in input field

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input type="text" id="representante" placeholder="Ingresa tu nombre" />
 
     <label for="equipo">Nombre del equipo:</label>
-    <input type="text" id="equipo" placeholder="Ej: Los Visionarios" />
+    <input type="text" id="equipo" placeholder="Ej: Proyectos y Transformación" />
 
     <label for="vp">Selecciona tu VP:</label>
     <select id="vp">
