Update VP options to use proper casing

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
     <label for="vp">Selecciona tu VP:</label>
     <select id="vp">
-      <option value="FINANZAS">FINANZAS</option>
-      <option value="OPERACIONES Y TECNOLOGIA">OPERACIONES Y TECNOLOGIA</option>
-      <option value="RIESGOS">RIESGOS</option>
-      <option value="MERCADO CAPITALES">MERCADO CAPITALES</option>
-      <option value="COMERCIAL">COMERCIAL</option>
-      <option value="NEGOCIOS RETAIL Y CANALES">NEGOCIOS RETAIL Y CANALES</option>
-      <option value="ASUNTOS CORPORATIVOS Y LEGALES">ASUNTOS CORPORATIVOS Y LEGALES</option>
-      <option value="DIV. AUDITORIA INTERNA">DIV. AUDITORIA INTERNA</option>
-      <option value="DIV. CUMPLIMIENTO">DIV. CUMPLIMIENTO</option>
-      <option value="ANALYTICS CENTER OF EXCELLENCE">ANALYTICS CENTER OF EXCELLENCE</option>
-      <option value="DIV. LABENTANA">DIV. LABENTANA</option>
-      <option value="GESTION Y DESARROLLO HUMANO">GESTION Y DESARROLLO HUMANO</option>
-      <option value="FDIGITAL DELIVERY Y PARTNERSHIPS">FDIGITAL DELIVERY Y PARTNERSHIPS</option>
+      <option value="Finanzas">Finanzas</option>
+      <option value="Operaciones y tecnología">Operaciones y tecnología</option>
+      <option value="Riesgos">Riesgos</option>
+      <option value="Mercado capitales">Mercado capitales</option>
+      <option value="Comercial">Comercial</option>
+      <option value="Negocios retail y canales">Negocios retail y canales</option>
+      <option value="Asuntos corporativos y legales">Asuntos corporativos y legales</option>
+      <option value="Div. auditoría interna">Div. auditoría interna</option>
+      <option value="Div. cumplimiento">Div. cumplimiento</option>
+      <option value="Analytics center of excellence">Analytics center of excellence</option>
+      <option value="Div. labentana">Div. labentana</option>
+      <option value="Gestión y desarrollo humano">Gestión y desarrollo humano</option>
+      <option value="Fdigital delivery y partnerships">Fdigital delivery y partnerships</option>
     </select>
 
     <button onclick="startGame()">Ingresar al juego</button>
